# esp32-webrtc-openai

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  partitions_16mb.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3.freenove  sdkconfig.defaults.esp32s3.n16r8cam  sdkconfig.production
components/audio/: CMakeLists.txt  Kconfig
components/audio/include/: audio_commands.h  audio_feedback.h  audio_module.h
components/audio/include/media/: audio_capture.h  audio_media.h  audio_player.h
components/audio/src/: audio_commands.c  audio_feedback.c  audio_module.c
components/audio/src/media/: audio_capture.c  audio_player.c
components/recorder/: CMakeLists.txt
components/recorder/include/: recorder_commands.h  recorder_module.h
components/sdspi/: CMakeLists.txt
components/system/: CMakeLists.txt  Kconfig
components/vision/: CMakeLists.txt  Kconfig  idf_component.yml
components/vision/include/: camera_commands.h  camera_module.h  camera_preview_server.h  vision_utils.h
components/vision/src/: camera_commands.c  camera_module.c  camera_preview_server.c  vision_utils.c
components/webrtc/: CMakeLists.txt  Kconfig  prompts.h
components/webrtc/include/: webrtc_commands.h  webrtc_module.h
components/webrtc/include/providers/openai/: openai_client.h  openai_signaling.h
components/webrtc/src/: webrtc_commands.c  webrtc_module.c
components/webrtc/src/providers/openai/: openai_client.c  openai_signaling.c
components/wifi/: CMakeLists.txt  Kconfig
main/: CMakeLists.txt  idf_component.yml  main.c
(+20 files in other folders)
